fixed footer overlapping byline

--- a/_sass/_base/_base.scss
+++ b/_sass/_base/_base.scss
@@ -24,9 +24,6 @@ img {
 
 body {
   background-color: #FFF;
-}
-
-body.default {
   margin-top: 100px;
 
   @include breakpoint(md) {
