--- a/_sass/_modules/_navigation.scss
+++ b/_sass/_modules/_navigation.scss
@@ -26,7 +26,7 @@ $max-width: 1560px;
   position: fixed;
   right: 10px;
   bottom: $outer-padding;
-  z-index: 9999;
+  z-index: 1;
   color: $dark-color;
   font-weight: 700;
   font-size: 14px;
